[tool.poetry]
name = "deep-rl-hands-on"
version = "0.1.0"
description = ""
authors = ["Jonathan Jin <me@jonathanj.in>"]

[tool.poetry.dependencies]
python = "^3.8"
gym = ">=0.21.0"
numpy = "^1.17"
torch = "1.9"
torchvision = ">=0.4.1"
pytorch-ignite = ">=0.2.1"
python-lsp-server = "^1.3"
python-lsp-black = "^1"
pylsp-mypy = "^0.5.7"
pyls-isort = "^0.2.2"

# Incompatible w/ torch 1.9, which actually installs. might need to fork.
pyglet = "^1.5.21"
# ptan = ">=0.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "gym",
]
ignore_missing_imports = true