[tool.poetry]
name = "deep-rl-hands-on"
version = "0.1.0"
description = ""
authors = ["Jonathan Jin <me@jonathanj.in>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.17"
torch = "1.9"
torchvision = ">=0.4.1"
pytorch-ignite = ">=0.2.1"
python-lsp-server = "^1.3"
python-lsp-black = "^1"
pylsp-mypy = "^0.5.7"
pyls-isort = "^0.2.2"

# Incompatible w/ torch 1.9, which actually installs. might need to fork.
pyglet = "^1.5.21"
tensorboardX = "^2.4.1"
six = "^1.16.0"
tensorboard = "^2.8.0"
opencv-python = "^4.5.5"
click = "^8.0.3"
ale-py = "^0.7.3"
gym = {version = "^0.21.0", extras = ["accept-rom-license"]}
# ptan = ">=0.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "cv2",
    "gym",
    "torchvision",
    "tensorboardX",
]
ignore_missing_imports = true